SERVER-121973 Fix tassert for replanning a rooted $or query (#49880)

GitOrigin-RevId: caea307da535db09f0ec6069499c46cac946f335